kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo-service
  namespace: yolo-segmentation
spec:
  type: ClusterIP
  selector:
    app: yolo-segmentation
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
